--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -1,17 +1,8 @@
 @import './vars';
 
-// form{
-//     text-align: center;
-//     display: none;
-// }
 .main-form{
     text-align: center;
     position: relative;
-    &:before{
-        content: '';
-        @include position(absolute,0,0,0,0);
-        background-size: cover;
-    }
     h1{
         font-size: 1rem;
     }
@@ -20,28 +11,31 @@
     }
     fieldset{
         border: none;
-        // padding: 0 30vmin;
         label{
             text-align: center;
             display: inline-block;
             min-height: 5rem;
-            width: 12%;
-            // margin: .5rem 0;
+            font-weight: lighter;
+            // width: 12%;
             padding: .5rem;
             transition: background .3s;
             transition: width .2s;
-            color: $green;
+            color: $blue;
             &:hover{
-                background: $mint;
-    
+                cursor: pointer;
             }
         }
         img{
-            width: 3vmax;
+            width: 80%;
         }
         h3{
-            font-size: .8rem;
+            font-size: 1rem;
             margin: .5rem 0;
+            color: #333333;
+            font-family: $headerfont;
+            &:hover {
+                background: $blue;
+            }
         }
     }
     input[type="radio"]:checked{
@@ -60,26 +54,6 @@ label{
 
 .logo{
     width: 50vmin;
-    // text-align: left;
-}
-
-.search-bar{
-    
-    label{
-        @include position(relative,-100%,0,0,0);
-        width: 100%;
-        transition: top .3s ease-out, transform .3s ease-out;
-    }
-    input{
-        width: 70%;
-        float: left;
-        padding: .5rem;
-        position: relative;
-        background: transparent;
-        border-radius: 0;
-        border: 3px solid $green;
-        text-align: center;
-    }
 }
 
 .search-container {
@@ -87,19 +61,33 @@ label{
     margin: 2.5rem 0 0;
 }
 
-.topic-container{
-    position: relative;
-    clear: both;
-    margin-top: 7rem;
+.search-bar{
+    display: flex;
+    align-items: stretch;
+    input{
+        width: 70%;
+        padding: .5rem;
+        position: relative;
+        background: transparent;
+        border: 3px solid #333333;
+        text-align: center;
+    }
 }
 
 .search-words {
     width: calc(30% - 5px);
-    float: left;
-    margin: 0;
     padding: 0.5rem;
+    margin: 0;
     border: 3px solid transparent;
     margin-left: 5px;
+    background: $blue;
+    color: #333333;
+}
+
+.topic-container{
+    position: relative;
+    clear: both;
+    margin-top: 7rem;
 }
 
 .category-options{
