--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -7,6 +7,7 @@ $green:#006750;
 $mint:#9BE0B6;
 $red:#FE0046;
 $light: #f1f1f1;
+$blue: #C5E7E2;
 
 // MIXINS
 @mixin position($type, $top, $right, $bottom, $left) { 
