--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,6 +1,32 @@
-// .inline-block{
-//     display: inline-block;
-// }
+
+.App {
+    display: flex;
+    flex-direction: column;
+}
+
+.App{
+    height: 100vh;
+    max-height: 100vh;
+    background: $light;
+    overflow-y: scroll;
+}
+
+.main-section {
+    padding-top: 30px;
+}
+
+.wrapper {
+  flex: 1 0 auto;
+}
+footer {
+  flex-shrink: 0;
+  background: #D3D0CB;
+  z-index: 10;
+  a {
+       color: #333333;
+  }
+}
+
 h1{
     font-family: $headerfont;
     text-align: center;
@@ -44,9 +70,9 @@ button, a.home-link{
     font-size: 1rem;
     padding: .5rem;
     margin: 0.5rem 0;
-    background: $mint;
+    background: $blue;
     border: none;
-    color: $green;
+    color: #333333;
     z-index: 999;
     box-shadow: 0px 0px 0 $green;
     transition: box-shadow .3s;
@@ -57,6 +83,20 @@ button, a.home-link{
     &:active{
         box-shadow: 7px 7px 10px $green;
     }
+}
+
+.gallery-nav {
+    width: calc(20% - 10px);
+    float: left;
+}
+
+.gallery-nav a.home-link {
+    width: 100%;
+}
+
+.gallery-header {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 ul{
@@ -81,16 +121,14 @@ a{
     transition: width .2s;
 }
 
-// Sweet alerts button style
-.swal-button{
-    background: #FE0046;
+.gallery-button {
+    padding: 10px;
 }
 
-.App{
-    height: 100vh;
-    max-height: 100vh;
-    background: $light;
-    overflow-y: scroll;
+// error handling/alerts button styles
+.swal-button{
+    background: $blue;
+    color: #333333;
 }
 
 .row{
@@ -98,11 +136,13 @@ a{
     display: block;
 }
 
-// Fridge Page
-.fridge{
-    max-height: 100vh;
+.swal-text {
+    text-align: center;
+    color: #333333;
 }
 
+
+//header styles
 .fridge-header, .poem-header {
     height: 15vh;
     width: 100%;
@@ -139,6 +179,7 @@ a{
     float: left;
 }
 
+//Fridge component
 .poem-dashboard{
     float: left;
     margin: 1rem 2rem 0 0; 
@@ -152,6 +193,20 @@ a{
     ul{
         width: 100%;
     }
+}
+
+// contains the fridge element
+// used on poem composition page as well as share poem page
+.fridge-container{
+    background: url(./assets/fridge.svg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: top;
+    padding: 4rem 7rem;
+    height: 100vh;
+    float: left;
+    width: 70%;
+    border-radius: 1rem;
 }
 
 // Share poem page
@@ -184,27 +239,32 @@ a{
 .make-own {
     width: 100%;
     float: none;
-} // Share poem page end
+} 
 
-.swal-text {
-    text-align: center;
-}
+// gallery page styles
+.list-holder {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    ul {
+        width: calc(33.33% - 20px);
+        margin: 10px;
+        background: $blue;
+        height: 250px;
+        position: relative;
+        padding-top:20px;
+        padding-left: 20px;
+    }
+    ul::before {
+        content: "";
+        height: 75px;
+        width: 10px;
+        background: #666666;
+        border-radius: 5px;
+        display:block;
+        position: absolute;
+        top:100px;
+        left: 10px;
+    }
 
-.main-section {
-    height: 95vh;
-    padding-top: 30px;
-}
-
-// contains the fridge element
-// used on poem composition page as well as share poem page
-.fridge-container{
-    background: url(./assets/fridge.svg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: top;
-    padding: 4rem 6rem;
-    height: 100vh;
-    float: left;
-    width: 70%;
-    border-radius: 1rem;
 }
